--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@hashgraph/sdk": "^2.45.0",
     "axios": "^1.7.1",
     "bootstrap": "^5.3.3",
-    "firebase": "^10.12.0",
+    "firebase": "^10.12.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^17.0.0",
     "@angular-devkit/build-angular": "^17.3.7",
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.0",
@@ -38,6 +39,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
